[feature]: handle phase 34 (#71)
